# ts-converter

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  test_main.http
static/: profdebug.js  profiling.css  profiling.js  styles.css
templates/: index.html  profdebug.html  profiling.html
